--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -1,8 +1,19 @@
 .input-component {
-  height: 35px;
+  height: 40px;
   border: none;
+  border-radius: 2px;
   outline: none;
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--font-color);
   font-family: var(--content-font-family);
+  border-bottom: 2px solid var(--font-color);
+  transition: 0.3s;
+}
+
+.input-component::placeholder {
+  color: var(--font-color);
+}
+
+.input-component:focus{
+  background-color: rgba(55, 55, 55, 0.2)
 }
