--- a/src/Routes/App.css
+++ b/src/Routes/App.css
@@ -14,8 +14,7 @@
 .app-container {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background: rgb(111,8,90);
-  background: linear-gradient(rgba(111,8,90,1) 10%, rgba(197,28,83,1) 100%);
+  background-color: #ebebee;
 }
